# TrueNorth-AIxHEART-2025-Discord

./: .env.example  .gitignore  Dockerfile  HerVoice.py  Makefile  README.md  docker-compose.demo.yml  docker-compose.yml  pyproject.toml
HerVoice/: AnswerGenerator.py  HerVoice.py  Knowledge.py  ModelUsage.py  TextCleaner.py  agent.py  app.py  system_prompt.txt  test_cases.json
HerVoice/pages/: Home.py
src/: AnswerGenerator.py  Knowledge.py  agentic_evaluation_results.csv  agentic_summary_stats.csv  answers_generated.json  bot.py  design_evaluator.py  evaluation_results.csv  similarity_evaluator.py  test_cases.json  test_server.sh  theme_meta_requirements_analysis.csv
src/ai_evaluations/anthropic-claude-evaluation/: notes.txt
src/ai_evaluations/google-gemini-evaluation/: agentic_evaluation_results.csv  agentic_summary_by_dp.csv
src/hervoice/: app.py  graph.py  main.py  run_example.py
src/hervoice/agent/: answer_generator.py  answer_verifier.py  chitter_chatter.py  document_relevence_checker.py  document_retriever.py  evaluation_agents.py  evaluator.py  generator.py  hallucination_checker.py  query_rewriter.py  reference_table.py  route_question.py  state.py  web_searcher.py
src/hervoice/llm/: models.py
src/hervoice/utils/: llm.py  logging.py  metaprompt.py
src/truenorth/: app.py
src/truenorth/agent/: answer_generator.py  document_relevence_checker.py  document_retriever.py  evaluation_agents.py  hallucination_checker.py  web_searcher.py
src/truenorth/llm/: models.py
src/truenorth/utils/: llm.py  metaprompt.py
