[project]
name = "hervoice"
version = "0.1.0"
description = ""
authors = [
    {name = "Joan Zheng, Varsha Shetty"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "openai (>=1.60.2,<2.0.0)",
    "langchain (>=0.3.15,<0.4.0)",
    "langchain-core (>=0.3.31,<0.4.0)",
    "langchain-openai (>=0.3.2,<0.4.0)",
    "langchain-community (>=0.3.15,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-together (>=0.3.0,<0.4.0)",
    "langchain-google-genai (>=2.0.9,<3.0.0)",
    "langchain-google-vertexai (>=2.0.13,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "pymupdf (>=1.25.3,<2.0.0)",
    "llama-cloud-services (>=0.6.3,<0.7.0)",
    "llama-index (>=0.12.22,<0.13.0)",
    "llama-index-core (>=0.12.22,<0.13.0)",
    "langchain-postgres (>=0.0.13,<0.0.14)",
    "firecrawl-py (>=1.13.2,<2.0.0)",
    "psycopg[binary] (>=3.2.5,<4.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "langchain-pymupdf4llm (>=0.2.0,<0.3.0)",
    "langgraph (>=0.3.21,<0.4.0)",
    "streamlit-feedback (>=0.1.4,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
